--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
-    --cor-fundo: #01080E ;
-    --cor-principal: #0B0D20 ;
-    --cor-secundaria: #212333; 
+    --cor-fundo: #abc3d8 ;
+    --cor-principal: #090a15 ;
+    --cor-secundaria: #090a14; 
     --cor-destaque: #2BDEFD;
     --cor-texto: #D7F9FF;
 
