--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --cor-fundo: #abc3d8 ;
     --cor-principal: #090a15 ;
-    --cor-secundaria: #ff0a12; 
+    --cor-secundaria: #c04e52; 
     --cor-destaque: #2BDEFD;
     --cor-texto: #D7F9FF;
 
